[gd_scene load_steps=3 format=2]

[ext_resource path="res://data/Actors/Actor.tscn" type="PackedScene" id=1]
[ext_resource path="res://data/Actors/Rock.gd" type="Script" id=2]

[node name="Rock" instance=ExtResource( 1 )]
collision_layer = 2
collision_mask = 3
script = ExtResource( 2 )
speed = 10

[node name="DamageZone" type="Area2D" parent="." index="5"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageZone" index="0"]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="." index="6"]
[connection signal="body_entered" from="DamageZone" to="." method="_on_DamageZone_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
